get open pos for item endpoint added

--- a/src/Services/Inv/Inv.WebAPI/appsettings.Development.json
+++ b/src/Services/Inv/Inv.WebAPI/appsettings.Development.json
@@ -6,12 +6,12 @@
     }
   },
     "ConnectionStrings": {
-        //"DefaultConnection": "Server=coredb;Database=INVDB;User Id=sa;Password=Sqlserver2019;MultipleActiveResultSets=true;TrustServerCertificate=True;",
-        //"DefaultTokenConnection": "Server=coredb;Database=CoreDB;User Id=sa;Password=Sqlserver2019;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+        "DefaultConnection": "Server=coredb;Database=INVDB;User Id=sa;Password=Sqlserver2019;MultipleActiveResultSets=true;TrustServerCertificate=True;",
+        "DefaultTokenConnection": "Server=coredb;Database=CoreDB;User Id=sa;Password=Sqlserver2019;MultipleActiveResultSets=true;TrustServerCertificate=True;"
         //"DefaultConnection": "Server=KOKILA-LAP\\SQLEXPRESS;Database=INVDB;User Id=sa;Password=Sqlserver2019;MultipleActiveResultSets=true;TrustServerCertificate=True;",
         //"DefaultTokenConnection": "Server=KOKILA-LAP\\SQLEXPRESS;Database=CoreDB;User Id=sa;Password=Sqlserver2019;MultipleActiveResultSets=true;TrustServerCertificate=True;"
-        "DefaultConnection": "Server=192.168.1.230;Database=INVDB;User Id=sa;Password=Sqlserver2019;MultipleActiveResultSets=true;TrustServerCertificate=True;",
-        "DefaultTokenConnection": "Server=192.168.1.230;Database=CoreDB;User Id=sa;Password=Sqlserver2019;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+        //"DefaultConnection": "Server=192.168.1.230;Database=INVDB;User Id=sa;Password=Sqlserver2019;MultipleActiveResultSets=true;TrustServerCertificate=True;",
+        //"DefaultTokenConnection": "Server=192.168.1.230;Database=CoreDB;User Id=sa;Password=Sqlserver2019;MultipleActiveResultSets=true;TrustServerCertificate=True;"
         //"DefaultConnection": "Server=LAPTOP-9N1CHSLO;Database=INVDB;Trusted_connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
     },
   "AppSettings": {
